--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       <section class="items"></section>
       <section class="cart">
         <ol class="cart__items"></ol>
+        <h3 class="total-price">Subtotal: R$</h3><br>
+
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
     </section>
