--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="script.js" defer></script>
   </head>
   <body>
+    <p class="loading"></p>
     <header class="header">
       <div class="container-title">
         <span class="title"><strong>trybe</strong>shopping</span>
