--- a/index.html
+++ b/index.html
@@ -31,8 +31,15 @@
       <section class="items"></section>
       <section class="cart">
         <ol class="cart__items"></ol>
-        <h3 class="total-price">Subtotal: R$</h3><br>
-
+        <div>
+          <br>
+          <br>
+          <br>
+        <p class="valor">Subtotal: R$
+          <span class="total-price"></span>
+        </p> <br>
+      </div>
+         
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
     </section>
